<resources>
    <string name="app_name">Foodie Management</string>
    <string name="default_price">R0</string>
    <string name="default_name">Chips</string>
    <string name="default_description">Fried french fries</string>
    <string name="button_add">Add</string>
    <string name="default_remove">Remove</string>
    <string name="default_add">Add</string>
    <string name="default_count">0</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Full Name</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="action_signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="action_register">Register</string>
    <string name="shop_name">Shop Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Enter email address linked to account</string>
    <string name="reset_password_confirm">Reset Password</string>
    <string name="shop_logo">Shop Logo Here</string>
    <string name="no_account">Do not have an account?</string>
    <string name="total_price">Total Price</string>
    <string name="show_orders">Show Orders</string>
    <string name="show_shop">Show Shop</string>
    <string name="profile">Profile</string>
    <string name="confirm">Confirm</string>
    <string name="open_or_close">Are you open or close</string>
    <string name="open">Opened</string>
    <string name="close">Closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>