<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLoginNewAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onNewAccountClicked"
        android:text="@string/no_account"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginOrSignup"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvLoginOrSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginOrSignup">

        <TextView
            android:id="@+id/tvLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLoginForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onForgotPasswordClicked"
            android:text="@string/forgot_password"
            android:textSize="25sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="onLoginClicked"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>