<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imgProfileShopLogo"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/shop_logo"
            android:maxWidth="200sp"
            android:maxHeight="200sp"
            android:onClick="onProfileShopLogoClicked"
            tools:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/tvProfileShopLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_logo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_or_close" />

        <Switch
            android:id="@+id/switchProfileStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/open"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tvProfileShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_name" />

        <EditText
            android:id="@+id/edProfileShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Full name"
            android:ems="10"
            android:hint="@string/shop_name"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvProfileShopAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Address" />

        <EditText
            android:id="@+id/edProfileShopAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Address"
            android:ems="10"
            android:hint="Address"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvProfileUserCellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cellphone_number" />

        <EditText
            android:id="@+id/edProfileUserCellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cellphone_number"
            android:inputType="phone"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnProfileEditConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onProfileConfirmClicked"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>