<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/items">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvIngredientName"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/default_name" />

                <TextView
                    android:id="@+id/tvIngredientPrice"
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/default_price" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRemoveIngredient"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/default_remove"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tvIngredientCount"
                    android:layout_width="30sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_count" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddIngredient"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/default_add"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>