<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/lstMainOrders"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toTopOf="@+id/btnMainPreviousOrders"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnMainProfile" />

  <ImageButton
      android:id="@+id/btnMainPreviousOrders"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentDescription="@string/show_shop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/round_shopping_bag_24" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/btnMainProfile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:contentDescription="@string/shop_logo"
      android:onClick="onProfileClicked"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/baseline_business_center_24" />

  <TextView
      android:id="@+id/tvMainShopName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/shop_name"
      app:layout_constraintBottom_toTopOf="@+id/lstMainOrders"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/btnMainProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>